Adds favicon from Aragon

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://aragon.org/favicon-32.png" sizes="32x32" />
+    <link rel="icon" href="https://aragon.org/favicon-57.png" sizes="57x57" />
+    <link rel="icon" href="https://aragon.org/favicon-72.png" sizes="72x72" />
+    <link rel="icon" href="https://aragon.org/favicon-96.png" sizes="96x96" />
+    <link rel="icon" href="https://aragon.org/favicon-120.png" sizes="120x120" />
+    <link rel="icon" href="https://aragon.org/favicon-128.png" sizes="128x128" />
+    <link rel="icon" href="https://aragon.org/favicon-144.png" sizes="144x144" />
+    <link rel="icon" href="https://aragon.org/favicon-152.png" sizes="152x152" />
+    <link rel="icon" href="https://aragon.org/favicon-195.png" sizes="195x195" />
+    <link rel="icon" href="https://aragon.org/favicon-228.png" sizes="228x228" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Aragon Ethereum Block Explorer" />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>AEBEx</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
